select opions sizing, proper viewport scaling responsivness

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       display: block;
       margin: var(--base-lh) 0;
       flex: 0 0 100%;
+      width: 100%;
     }
 
     .section .vert-spacing {
