--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page Example</title>
-  <link rel="stylesheet" href="/reset.css" />
+  <link rel="stylesheet" href="./reset.css" />
   <style>
     body {
       background-image: linear-gradient(to bottom, rgba( 32,160,255,.35 ) 1px, transparent 1px);
