remove sizes for svg

--- a/index.html
+++ b/index.html
@@ -309,30 +309,6 @@ export default function collectionSort(data, sortBy, sortDirection) {
 
         </pre>
     </div>
-    <div class="section-subgroup half-size">
-      <figure>
-        <figcaption><cite>Edsger Dijkstra:</cite></figcaption>
-        <blockquote>If debugging is the process of removing software bugs,
-          then programming must be the process of putting them in.</blockquote>
-      </figure>
-    </div>
-    <div class="section-subgroup half-size">
-      <figure>
-        <pre>
-function NavigatorExample() {
-  var txt;
-  txt = "Browser CodeName: " + navigator.appCodeName + "; ";
-  txt+= "Browser Name: " + navigator.appName + "; ";
-  txt+= "Browser Version: " + navigator.appVersion  + "; ";
-  txt+= "Cookies Enabled: " + navigator.cookieEnabled  + "; ";
-  txt+= "Platform: " + navigator.platform  + "; ";
-  txt+= "User-agent header: " + navigator.userAgent  + "; ";
-  console.log("NavigatorExample", txt);
-}
-        </pre>
-        <figcaption>Figure preformatted example</figcaption>
-      </figure>
-    </div>
   </div>
   <div class="section">
     <span class="section-title">Media and embeeded:</span>
@@ -374,7 +350,7 @@ function NavigatorExample() {
     </div>
     <div class="section-subgroup half-size">
       <figure>
-        <svg width="420" height="240" version="1.1" viewBox="0 0 630 512" xml:space="preserve"
+        <svg version="1.1" viewBox="0 0 630 512" xml:space="preserve"
           xmlns="http://www.w3.org/2000/svg">
           <style type="text/css">
             .plane {
@@ -410,6 +386,23 @@ function NavigatorExample() {
       <figure>
         <object style="--aspect: 420/240;" data="http://www.africau.edu/images/default/sample.pdf" type="application/pdf"></object>
         <figcaption>External entity as object</figcaption>
+      </figure>
+    </div>
+    <div class="section-subgroup half-size">
+      <figure>
+        <pre>
+function NavigatorExample() {
+  var txt;
+  txt = "Browser CodeName: " + navigator.appCodeName + "; ";
+  txt+= "Browser Name: " + navigator.appName + "; ";
+  txt+= "Browser Version: " + navigator.appVersion  + "; ";
+  txt+= "Cookies Enabled: " + navigator.cookieEnabled  + "; ";
+  txt+= "Platform: " + navigator.platform  + "; ";
+  txt+= "User-agent header: " + navigator.userAgent  + "; ";
+  console.log("NavigatorExample", txt);
+}
+        </pre>
+        <figcaption>Figure preformatted example</figcaption>
       </figure>
     </div>
   </div>
