add fluid adaptive grid system

--- a/index.html
+++ b/index.html
@@ -883,15 +883,15 @@ function NavigatorExample() {
     <span class="section-title">Semantics layout and sectioning:</span>
     <section class="grid">
       <article class="grid-cell layout-highlight"></article>
-      <article class="grid-cell layout-highlight" data-span="2"></article>
-      <article class="grid-cell layout-highlight" data-span="3"></article>
-      <article class="grid-cell layout-highlight" data-span="2"></article>
-      <article class="grid-cell layout-highlight" data-span="5"></article>
-      <article class="grid-cell layout-highlight" data-span="3"></article>
-      <article class="grid-cell layout-highlight" data-span="8"></article>
-      <article class="grid-cell layout-highlight" data-span="4"></article>
-      <article class="grid-cell layout-highlight" data-span="4"></article>
-      <article class="grid-cell layout-highlight" data-span="7"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
+      <article class="grid-cell layout-highlight"></article>
       <article class="grid-cell layout-highlight"></article>
       <article class="grid-cell layout-highlight"></article>
       <article class="grid-cell layout-highlight"></article>
